--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ git:
 
 ## uncomment the following lines to override the default test script
 #script:
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("StrRegex"); Pkg.test("StrRegex"; coverage=true)'
+#  - julia -e 'Pkg.clone("https://github.com/JuliaString/Strs.jl.git"); Pkg.clone(pwd()); Pkg.build("StrRegex"); Pkg.test("StrRegex"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("StrRegex")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
