--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ git:
 #  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
 
 ## uncomment the following lines to override the default test script
-#script:
+script:
    - julia -e 'Pkg.clone("https://github.com/JuliaString/Strs.jl.git"); Pkg.clone("https://github.com/JuliaString/PCRE2.jl.git"); Pkg.clone(pwd()); Pkg.build("StrRegex"); Pkg.test("StrRegex"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
