--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,9 @@ git:
 
 ## uncomment the following lines to override the default test script
 script:
-   - julia -e 'Pkg.clone("https://github.com/JuliaString/Strs.jl.git"); Pkg.clone("https://github.com/JuliaString/PCRE2.jl.git"); Pkg.clone(pwd()); Pkg.build("StrRegex"); Pkg.test("StrRegex"; coverage=true)'
+   - julia -e 'VERSION < v"0.7.0-DEV" || (using Pkg); d="https://github.com/JuliaString" ; Pkg.add("PCRE2") ; for n in ("APITools", "StrAPI", "CharSetEncodings", "Chars", "StrBase") ; Pkg.clone("$d/$n.jl") ; end ; Pkg.clone(pwd()); Pkg.test("StrRegex"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("StrRegex")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'VERSION < v"0.7.0-DEV" || (using Pkg); cd(Pkg.dir("StrRegex")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("StrRegex")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'VERSION < v"0.7.0-DEV" || (using Pkg); cd(Pkg.dir("StrRegex")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
