--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ git:
 
 ## uncomment the following lines to override the default test script
 script:
-   - julia -e 'VERSION < v"0.7.0-DEV" || (using Pkg); d="https://github.com/JuliaString" ; Pkg.add("PCRE2") ; for n in ("ModuleInterfaceTools", "StrAPI", "CharSetEncodings", "Chars", "StrBase") ; Pkg.clone("$d/$n.jl") ; end ; Pkg.clone(pwd()); Pkg.test("StrRegex"; coverage=true)'
+   - julia -e 'VERSION < v"0.7.0-DEV" || (using Pkg); d="https://github.com/JuliaString" ; for n in ("PCRE2", "ModuleInterfaceTools") ; Pkg.add(n) ; end ; for n in ("StrAPI", "CharSetEncodings", "ChrBase", "StrBase") ; Pkg.clone("$d/$n.jl") ; end ; Pkg.clone(pwd()); Pkg.test("StrRegex"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'VERSION < v"0.7.0-DEV" || (using Pkg); cd(Pkg.dir("StrRegex")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
