--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,8 +40,9 @@ install:
 build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
-  - C:\projects\julia\bin\julia -e "versioninfo();
-      Pkg.clone(pwd(), \"StrRegex\"); Pkg.build(\"StrRegex\")"
+  - C:\projects\julia\bin\julia -e "VERSION < v\"0.7.0-DEV\" || (using Pkg, InteractiveUtils);
+      versioninfo(); pkg = \"StrRegex\";
+      if VERSION < v\"0.7.0-DEV.5183\"; Pkg.clone(pwd(), pkg); else; Pkg.add(pwd(), pkg); end"
 
 test_script:
-  - C:\projects\julia\bin\julia -e "Pkg.test(\"StrRegex\")"
+  - C:\projects\julia\bin\julia -e "VERSION < v\"0.7.0-DEV\" || (using Pkg); Pkg.test(\"StrRegex\")"
