--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ git:
 
 ## uncomment the following lines to allow failures on nightly julia
 ## (tests will run but not make your overall status red)
-#matrix:
-#  allow_failures:
-#  - julia: nightly
+matrix:
+  allow_failures:
+  - julia: nightly
 
 ## uncomment and modify the following lines to manually install system packages
 #addons:
@@ -27,7 +27,7 @@ git:
 
 ## uncomment the following lines to override the default test script
 script:
-   - julia -e 'VERSION < v"0.7.0-DEV" || (using Pkg) ; if VERSION < v"0.7.0-DEV.5183" ; for n in ("ModuleInterfaceTools", "PCRE2", "StrAPI", "CharSetEncodings") ; Pkg.add(n) ; end ; for n in ("ChrBase", "MurmurHash3", "StrBase") ; Pkg.clone("https://github.com/JuliaString/$n.jl") ; end ; Pkg.clone(pwd()) ; end ; Pkg.test("StrRegex"; coverage=true)'
+   - julia -e 'VERSION < v"0.7.0-DEV" || (using Pkg) ; if VERSION < v"0.7.0-DEV.5183" ; for n in ("ModuleInterfaceTools", "PCRE2", "StrAPI", "CharSetEncodings") ; Pkg.add(n) ; end ; for n in ("ChrBase", "StrBase") ; Pkg.clone("https://github.com/JuliaString/$n.jl") ; end ; Pkg.clone(pwd()) ; end ; Pkg.test("StrRegex"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'VERSION < v"0.7.0-DEV" || (using Pkg); cd(Pkg.dir("StrRegex")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
