--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,8 @@ name = "StrRegex"
 repo-rev = ""
 repo-url = "https://github.com/JuliaString/StrRegex.jl.git"
 uuid = "128fb37e-e16c-4908-8083-6410b01968ef"
+version = "0.1.0"
+
+[deps]
+PCRE2 = "c9310f65-a42c-5928-aca3-d34f64192029"
+StrBase = "40048718-5f69-11e8-3be1-2f493f2f747a"
