--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,15 +42,12 @@ build_script:
   - IF EXIST .git\shallow (git fetch --unshallow)
   - C:\projects\julia\bin\julia -e "VERSION < v\"0.7.0-DEV\" || (using InteractiveUtils);
       versioninfo(); pkg = \"StrRegex\";
+      la = (\"ModuleInterfaceTools\", \"MurmurHash3\", \"StrTables\", \"StrAPI\", \"CharSetEncodings\", \"ChrBase\");
       if VERSION < v\"0.7.0-DEV.5183\";
-         for n in (\"ModuleInterfaceTools\", \"MurmurHash3\", \"StrTables\", \"StrAPI\", \"CharSetEncodings\");
-             Pkg.add(n);
-         end;
-         for n in (\"ChrBase\", \"StrBase\");
-             Pkg.clone(\"https://github.com/JuliaString/$n.jl.git\", n);
-         end;
+         for n in la; Pkg.add(n); end;
+         Pkg.clone(\"https://github.com/JuliaString/StrBase.jl.git\", \"StrBase\");
          Pkg.clone(pwd(), pkg);
-      end"
+      else; Pkg.up(); end"
 
 test_script:
-  - C:\projects\julia\bin\julia -e "VERSION < v\"0.7.0-DEV\" || (using Pkg); Pkg.test(\"StrRegex\")"
+  - C:\projects\julia\bin\julia -e "Pkg.test(\"StrRegex\")"
