--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,13 +41,20 @@ build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
   - C:\projects\julia\bin\julia -e "VERSION < v\"0.7.0-DEV\" || (using InteractiveUtils);
-      versioninfo(); pkg = \"StrRegex\";
-      la = (\"ModuleInterfaceTools\", \"MurmurHash3\", \"StrTables\", \"StrAPI\", \"CharSetEncodings\", \"ChrBase\");
+      versioninfo(); pkg = \"StrRegex\"; loc = \"https://github.com/JuliaString\";
+      mit = \"ModuleInterfaceTools\"; mh3 = \"MurmurHash3\"; sb = \"StrBase\";
+      la = (\"PCRE2\", \"StrAPI\", \"CharSetEncodings\", \"ChrBase\");
       if VERSION < v\"0.7.0-DEV.5183\";
-         for n in la; Pkg.add(n); end;
-         Pkg.clone(\"https://github.com/JuliaString/StrBase.jl.git\", \"StrBase\");
-         Pkg.clone(pwd(), pkg);
-      else; Pkg.up(); end"
+          Pkg.clone(\"$loc/$mit.jl\", mit);
+          Pkg.clone(\"$loc/$mh3.jl\", mh3);
+          for n in la; Pkg.add(n); end;
+          Pkg.clone(\"$loc/$sb.jl\", sb);
+          Pkg.clone(pwd(), pkg);
+      else;
+          using Pkg;
+          for n in (mit, mh3, sb); Pkg.add(\"$loc/$n.jl\"); end;
+      end;
+      Pkg.build(\"PCRE2\")"
 
 test_script:
   - C:\projects\julia\bin\julia -e "Pkg.test(\"StrRegex\")"
