--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ matrix:
 #  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
 
 ## uncomment the following lines to override the default test script
-script:
-  - julia -e 'mit = "ModuleInterfaceTools"; mh3 = "MurmurHash3"; loc = "https://github.com/JuliaString"; sb = "StrBase"; if VERSION < v"0.7.0-DEV.5183"; Pkg.clone("$loc/$mit.jl"); Pkg.clone("$loc/$mh3.jl"); for n in ("PCRE2", "StrAPI", "CharSetEncodings", "ChrBase"); Pkg.add(n); end; Pkg.clone("$loc/$sb.jl"); Pkg.clone(pwd()); else; using Pkg; for n in (mit, mh3, sb); Pkg.add("$loc/$n.jl"); end ; end; Pkg.build("PCRE2"); Pkg.test("StrRegex", coverage=true)'
+#script:
+#  - julia -e 'mit = "ModuleInterfaceTools"; mh3 = "MurmurHash3"; loc = "https://github.com/JuliaString"; sb = "StrBase"; if VERSION < v"0.7.0-DEV.5183"; Pkg.clone("$loc/$mit.jl"); Pkg.clone("$loc/$mh3.jl"); for n in ("PCRE2", "StrAPI", "CharSetEncodings", "ChrBase"); Pkg.add(n); end; Pkg.clone("$loc/$sb.jl"); Pkg.clone(pwd()); else; using Pkg; for n in (mit, mh3, sb); Pkg.add("$loc/$n.jl"); end ; end; Pkg.build("PCRE2"); Pkg.test("StrRegex", coverage=true)'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("StrRegex")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
