--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,7 +42,7 @@ build_script:
   - IF EXIST .git\shallow (git fetch --unshallow)
   - C:\projects\julia\bin\julia -e "VERSION < v\"0.7.0-DEV\" || (using InteractiveUtils);
       versioninfo();
-      if VERSION < v\"0.7.0-DEV.5183\"; Pkg.clone(pwd(), \"StrRegex\"); else; using Pkg; end"
+      if VERSION < v\"0.7.0-DEV.5183\"; Pkg.clone(pwd(), \"StrRegex\"); else; using Pkg; Pkg.up(); end"
       Pkg.build(\"PCRE2\")"
 
 test_script:
