--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,10 +40,8 @@ install:
 build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
-  - C:\projects\julia\bin\julia -e "VERSION < v\"0.7.0-DEV\" || (using InteractiveUtils);
-      versioninfo();
-      if VERSION < v\"0.7.0-DEV.5183\"; Pkg.clone(pwd(), \"StrRegex\"); else; using Pkg; Pkg.up(); end"
-      Pkg.build(\"PCRE2\")"
+  - C:\projects\julia\bin\julia -e "VERSION < v\"0.7.0-DEV\" || (using Pkg, InteractiveUtils);
+      versioninfo(); Pkg.clone(pwd(), \"StrRegex\")"
 
 test_script:
-  - C:\projects\julia\bin\julia -e "Pkg.test(\"StrRegex\")"
+  - C:\projects\julia\bin\julia -e "VERSION < v\"0.7.0-DEV\" || (using Pkg); Pkg.test(\"StrRegex\")"
