--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ uuid = "128fb37e-e16c-4908-8083-6410b01968ef"
 Pkg     = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test    = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
+Random  = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 ModuleInterfaceTools = "5cb8414e-7aab-5a03-a681-351269c074bf"
 PCRE2   = "c9310f65-a42c-5928-aca3-d34f64192029" # d62uhoik906m7n8r
