--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ git:
 ## (tests will run but not make your overall status red)
 matrix:
   allow_failures:
+  - julia: 1.0
   - julia: nightly
 
 ## uncomment and modify the following lines to manually install system packages
@@ -29,9 +30,7 @@ matrix:
 
 ## uncomment the following lines to override the default test script
 #script:
-#  - julia -e 'if VERSION < v"0.7.0-DEV.5183"; Pkg.clone(pwd()); else; using Pkg; Pkg.add(pwd()); Pkg.up(); end; Pkg.test("StrRegex", coverage=true)'
+
 after_success:
-  # push coverage results to Coveralls
-  - julia -e 'VERSION < v"0.7.0-DEV" || (using Pkg); cd(Pkg.dir("StrRegex")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
-  # push coverage results to Codecov
-  - julia -e 'VERSION < v"0.7.0-DEV" || (using Pkg); cd(Pkg.dir("StrRegex")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  # push coverage results to Coveralls & Codecov
+  - julia -e 'VERSION < v"0.7.0-DEV" || (using Pkg); cd(Pkg.dir("StrRegex")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder()); Codecov.submit(Codecov.process_folder())'
