--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ keywords = ["Strings", "Regex", "PCRE", "Unicode"]
 license = "MIT"
 name = "StrRegex"
 uuid = "2267b70d-4c4a-5da2-8395-98751c0d506a"
+version = "1.0.0"
 
 [deps]
 ModuleInterfaceTools = "5cb8414e-7aab-5a03-a681-351269c074bf"
