Update for new CI

--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,7 @@ keywords = ["Strings", "Regex", "PCRE", "Unicode"]
 license = "MIT"
 name = "StrRegex"
 uuid = "2267b70d-4c4a-5da2-8395-98751c0d506a"
-version = "1.1.0"
+version = "1.1.1"
 
 [deps]
 ModuleInterfaceTools = "5cb8414e-7aab-5a03-a681-351269c074bf"
@@ -24,11 +24,11 @@ Random  = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 test = ["Test", "Unicode", "Random"]
 
 [compat]
-julia = "^1.0.0"
+julia = "1"
 ModuleInterfaceTools = "1.0.1"
-StrAPI = "1.0.0"
+StrAPI = "1"
 MurmurHash3 = "1.0.3"
 PCRE2 = "1.0.2"
-ChrBase = "1.0.0"
-CharSetEncodings = "1.0.0"
+ChrBase = "1"
+CharSetEncodings = "1"
 StrBase = "1.0.1"
